--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
 <!--        </dependency>-->
 <!--    </dependencies>-->
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
